--- a/test.html
+++ b/test.html
@@ -332,3 +332,97 @@
     }
   }
 </style>
+
+<div class="col-4 col-12-mobile">
+  <section>
+    <header>
+      <h3><a>Technical skills</a></h3>
+    </header>
+    <div class="row gtr-50">
+      <div class="col-4">
+        <strong>Python</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 100%"></div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <strong>LaTeX</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 100%"></div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <strong>MATLAB</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 90%"></div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <strong>AutoCAD</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 75%"></div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <strong>Mathematica</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 75%"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr />
+  <section>
+    <header>
+      <h3><a>Languages</a></h3>
+    </header>
+    <div class="row gtr-50">
+      <div class="col-4">
+        <strong>Mandarin</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 100%"></div>
+        </div>
+      </div>
+      <div class="col-4">
+        <strong>Hokkien</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 95%"></div>
+        </div>
+      </div>
+      <div class="col-4">
+        <strong>English</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 85%"></div>
+        </div>
+      </div>
+      <div class="col-4">
+        <strong>German</strong>
+      </div>
+      <div class="col-8">
+        <div class="progress-container">
+          <div class="progress-bar" id="progress-bar" style="width: 20%"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
