--- a/index.html
+++ b/index.html
@@ -185,22 +185,24 @@
       </div>
 
       <section id="education">
-        <header>
-          <h3>Education</h3>
-        </header>
-        <div class="education-entry">
-          <h4>Imperial College London</h4>
-          <p class="date"><i>Sep. 2023 - Jun. 2025 (Expected)</i></p>
-          <p>
-            M.Sc. in Physics with Extended Research, advised by Dr. John
-            Michniewicz
-          </p>
-        </div>
+        <div class="container">
+          <header>
+            <h3>Education</h3>
+          </header>
+          <div class="education-entry">
+            <h4>Imperial College London</h4>
+            <p class="date"><i>Sep. 2023 - Jun. 2025 (Expected)</i></p>
+            <p>
+              M.Sc. in Physics with Extended Research, advised by Dr. John
+              Michniewicz
+            </p>
+          </div>
 
-        <div class="education-entry">
-          <h4>Huazhong University of Science and Technology</h4>
-          <p class="date"><i>Sep. 2018 - Jun. 2022</i></p>
-          <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
+          <div class="education-entry">
+            <h4>Huazhong University of Science and Technology</h4>
+            <p class="date"><i>Sep. 2018 - Jun. 2022</i></p>
+            <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
+          </div>
         </div>
       </section>
 
