--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
             </header>
             <div class="education-entry">
               <h4>Imperial College London</h4>
-              <p class="date"><i>Sep. 2023 - Jun. 2025 (Expected)</i></p>
-              <p>
+              <p class="date">
+                <i>Sep. 2023 - Jun. 2025 (Expected)</i><br />
                 M.Sc. in Physics with Extended Research, advised by Dr. John
                 Michniewicz
               </p>
@@ -196,8 +196,10 @@
 
             <div class="education-entry">
               <h4>Huazhong University of Science and Technology</h4>
-              <p class="date"><i>Sep. 2018 - Jun. 2022</i></p>
-              <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
+              <p class="date">
+                <i>Sep. 2018 - Jun. 2022</i><br />B.S. in Physics, advised by
+                Prof. Jianming Cai
+              </p>
             </div>
           </section>
         </div>
