--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
               morning person who enjoys the calm and peacefulness of the early
               hours. Interestingly, "Chen" sounds similar to "Cheng", the
               Chinese word for "orange". Because of this playful resemblance, my
-              friends affectionately call me "Cheng-Zi", which translates to
-              "orange".
+              friends affectionately call me "Cheng-Zi" (橙子), which translates
+              to "orange".
             </p>
             <p>
               My surname is <strong>Huang</strong>, which means "yellow" in
