--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                     <span class="loading-indicator" aria-hidden="true"></span>
                   </div>
                 </h2>
+                <audio
+                  id="name-audio"
+                  src="audio/pronunciation_zh_chen.mp3"
+                ></audio>
                 <p>
                   a passionate physics student exploring the
                   <strong>quantum world</strong>.
