--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="container">
           <article id="main" class="special">
             <p>
-              My given name is <strong>Chen</strong>, which means "dawn" or
+              My given name is <strong>Chen</strong> (晨), which means "dawn" or
               "early morning" in Chinese. This meaning suits me well, as I am a
               morning person who enjoys the calm and peacefulness of the early
               hours. Interestingly, "Chen" sounds similar to "Cheng", the
@@ -168,7 +168,7 @@
               to "orange".
             </p>
             <p>
-              My surname is <strong>Huang</strong>, which means "yellow" in
+              My surname is <strong>Huang</strong> (黄), which means "yellow" in
               Chinese. This name has deep historical and cultural roots. It is
               often associated with the
               <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
