--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
               My given name is <strong>Chen</strong> (晨), which means "dawn" or
               "early morning" in Chinese. This meaning suits me well, as I am a
               morning person who enjoys the calm and peacefulness of the early
-              hours. Interestingly, "Chen" sounds similar to "Cheng", the
-              Chinese word for "orange". Because of this playful resemblance, my
-              friends affectionately call me "Cheng-Zi" (橙子), which translates
-              to "orange".
+              hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
+              which means "orange" in Chinese. Because of this playful
+              similarity, my friends affectionately call me "Cheng-Zi" (橙子),
+              meaning "orange."
             </p>
             <p>
               My surname is <strong>Huang</strong> (黄), which means "yellow" in
@@ -177,12 +177,17 @@
               Chinese civilization.
             </p>
             <p>
-              I am always on the lookout for opportunities to expand my
-              knowledge and skills. I'm eager to connect with like-minded
-              individuals and organizations whether through collaborative
-              projects, internships, or further academic research. If you're
-              interested in my research or potential collaboration, please feel
-              free to reach out!
+              I am passionate about expanding my knowledge through
+              interdisciplinary research and collaboration. If you're interested
+              in discussing research or potential collaborations, feel free to
+              reach out via
+              <a href="mailto:chen.huang23@imperial.ac.uk">email</a> or connect
+              with me on
+              <a
+                href="https://www.linkedin.com/in/chen-huang-820x"
+                target="_blank"
+                >LinkedIn</a
+              >.
             </p>
           </article>
           <section id="education">
