--- a/notes/year.html
+++ b/notes/year.html
@@ -57,7 +57,7 @@
             </li>
             <li><a href="/publications.html">Publications</a></li>
 
-            <li><a href="/notes/index.html">Notes</a></li>
+            <li><a href="/notes.html">Notes</a></li>
             <li><a href="/outreach/ibpe.html">Outreach</a></li>
             <li>
               <a href="#">Life</a>
@@ -103,8 +103,7 @@
               <article id="main">
                 <p>
                   Sorted by &nbsp;
-                  <i class="fas fa-university"></i>&nbsp;<a
-                    href="/notes/index.html"
+                  <i class="fas fa-university"></i>&nbsp;<a href="/notes.html"
                     >University</a
                   >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
                   <a href="/notes/year.html">Year</a>
