--- a/photography.html
+++ b/photography.html
@@ -57,7 +57,7 @@
             </li>
             <li><a href="/publications.html">Publications</a></li>
 
-            <li><a href="/notes/index.html">Notes</a></li>
+            <li><a href="/notes.html">Notes</a></li>
             <li><a href="/outreach/ibpe.html">Outreach</a></li>
             <li>
               <a href="#">Life</a>
