--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,7 @@
             </header>
             <section>
               <header>
-                <h3>2023</h3>
+                <h3>2024</h3>
               </header>
               <ul>
                 <li>
@@ -138,6 +138,11 @@
                     >PDF</a
                   >)
                 </li>
+              </ul>
+              <header>
+                <h3>2023</h3>
+              </header>
+              <ul>
                 <li>
                   <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
                   parameter correction method and device, electronic equipment
