--- a/index.html
+++ b/index.html
@@ -194,22 +194,21 @@
             <header>
               <h3>Education</h3>
             </header>
-            <div class="education-entry">
-              <h4>Imperial College London</h4>
-              <p class="date">
+            <ul>
+              <li>
+                <strong>Imperial College London</strong><br />
                 <i>Sep. 2023 - Jun. 2025 (Expected)</i><br />
                 M.Sc. in Physics with Extended Research, advised by Dr. John
                 Michniewicz
-              </p>
-            </div>
-
-            <div class="education-entry">
-              <h4>Huazhong University of Science and Technology</h4>
-              <p class="date">
-                <i>Sep. 2018 - Jun. 2022</i><br />B.S. in Physics, advised by
-                Prof. Jianming Cai
-              </p>
-            </div>
+              </li>
+              <br />
+              <li>
+                <strong>Huazhong University of Science and Technology</strong
+                ><br />
+                <i>Sep. 2018 - Jun. 2022</i><br />
+                B.S. in Physics, advised by Prof. Jianming Cai
+              </li>
+            </ul>
           </section>
           <section id="research">
             <header>
