--- a/notes.html
+++ b/notes.html
@@ -677,71 +677,69 @@
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
-                  <section id="pku-quantum-mechanics">
-                    <div class="course-card">
-                      <div class="course-header">
-                        <h4>Quantum Mechanics II (Summer 2020)</h4>
-                        <div class="course-meta">
-                          <span class="pill">Graduate</span>
-                        </div>
-                      </div>
-                      <div class="course-body">
-                        <p>
-                          These are my lecture notes from the Quantum Mechanics
-                          II course taught by Prof. Zhixin Qian during the 2020
-                          Summer School at Peking University.
-                        </p>
-                        <div class="resource-links">
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a href="/docs/notes/Ch1_Phase in QM.pdf"
-                            >Chapter 1: Phase in Quantum Mechanics</a
-                          >
-                          <br />
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a
-                            href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
-                            >Chapter 2: Path Integral Formalism of Quantum
-                            Mechanics</a
-                          >
-                          <br />
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a href="/docs/notes/Ch3_The WKB Approximation.pdf"
-                            >Chapter 3: The WKB Approximation</a
-                          >
-                          <br />
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a
-                            href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
-                            >Chapter 4: Rotation and Vibration of Molecules</a
-                          >
-                          <br />
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a
-                            href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
-                            >Chapter 5: Variation Principle</a
-                          >
-                          <br />
-                          <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
-                            >Study Notes:
-                          </strong>
-                          <a
-                            href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
-                            >Chapter 6: Introduction to Many-Body Theory</a
-                          >
-                        </div>
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Quantum Mechanics II (Summer 2020)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
                       </div>
                     </div>
-                  </section>
+                    <div class="course-body">
+                      <p>
+                        These are my lecture notes from the Quantum Mechanics II
+                        course taught by Prof. Zhixin Qian during the 2020
+                        Summer School at Peking University.
+                      </p>
+                      <div class="resource-links">
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a href="/docs/notes/Ch1_Phase in QM.pdf"
+                          >Chapter 1: Phase in Quantum Mechanics</a
+                        >
+                        <br />
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a
+                          href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
+                          >Chapter 2: Path Integral Formalism of Quantum
+                          Mechanics</a
+                        >
+                        <br />
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a href="/docs/notes/Ch3_The WKB Approximation.pdf"
+                          >Chapter 3: The WKB Approximation</a
+                        >
+                        <br />
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a
+                          href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
+                          >Chapter 4: Rotation and Vibration of Molecules</a
+                        >
+                        <br />
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a
+                          href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
+                          >Chapter 5: Variation Principle</a
+                        >
+                        <br />
+                        <i class="fas fa-book"></i>&nbsp;&nbsp;<strong
+                          >Study Notes:
+                        </strong>
+                        <a
+                          href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
+                          >Chapter 6: Introduction to Many-Body Theory</a
+                        >
+                      </div>
+                    </div>
+                  </div>
                 </section>
                 <section id="others">
                   <header>
