--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>
-              <a href="#main" class="scrolly">Chen Huang (黄晨)</a>
-            </h1>
+            <h1>Chen Huang (黄晨)</h1>
+            <h2>黄晨</h2>
             <br /><br />
             <ul class="icons">
               <li>
@@ -164,13 +163,12 @@
               </li>
             </ul>
             <br /><br />
-            <p>Welcome to Chen's Physics World!</p>
+            <p>
+              <a href="#main" class="icon fa-solid fa-angle-down scrolly"
+                >Welcome to Chen's Physics World!</a
+              >
+            </p>
           </header>
-          <footer>
-            <a href="#main" class="icon fa-solid fa-angle-down scrolly"
-              ><span class="label">Start</span></a
-            >
-          </footer>
         </div>
 
         <!-- Nav -->
