--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Chen Huang (黄晨)</h1>
-            <h2>黄晨</h2>
+            <h1>Chen Huang</h1>
             <br /><br />
             <ul class="icons">
               <li>
