--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -131,30 +131,27 @@
           <div class="row">
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="/images/pic07.jpg" alt=""
+                ><img src="/images/ibpe/photo_1.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Gravida aliquam penatibus</a></h3>
+                <h3><a href="#">IBPE 2019</a></h3>
               </header>
               <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
+                After competing in the 2019 CUPT, our team proudly secured
+                **second place nationwide**. This photo captures our joyful
+                celebration after the competition.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="/images/pic08.jpg" alt=""
+                ><img src="/images/ibpe/photo_2.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+                <h3><a href="#">IBPE 2019</a></h3>
               </header>
               <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
+                Another memorable moment from **IBPE 2019**, taken right after
+                our **remarkable performance at the CUPT**.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
