--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -134,7 +134,7 @@
                 ><img src="/images/ibpe/photo_1.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">IBPE 2019</a></h3>
+                <h3>IBPE 2019</h3>
               </header>
               <p>
                 After competing in the 2019 CUPT, our team proudly secured
@@ -147,7 +147,7 @@
                 ><img src="/images/ibpe/photo_2.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">IBPE 2019</a></h3>
+                <h3>IBPE 2019</h3>
               </header>
               <p>
                 Another memorable moment from **IBPE 2019**, taken right after
@@ -159,7 +159,7 @@
                 ><img src="/images/pic09.jpg" alt=""
               /></a>
               <header>
-                <h3><a href="#">Magna laoreet et aliquam</a></h3>
+                <h3>Magna laoreet et aliquam</h3>
               </header>
               <p>
                 Amet nullam fringilla nibh nulla convallis tique ante proin
