--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -138,8 +138,8 @@
               </header>
               <p>
                 After competing in the 2019 CUPT, our team proudly secured
-                **second place nationwide**. This photo captures our joyful
-                celebration after the competition.
+                <strong>second place nationwide</strong>. This photo captures
+                our joyful celebration after the competition.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
@@ -150,8 +150,8 @@
                 <h3>IBPE 2019</h3>
               </header>
               <p>
-                Another memorable moment from **IBPE 2019**, taken right after
-                our **remarkable performance at the CUPT**.
+                Another memorable moment from IBPE 2019, taken right after our
+                remarkable performance at the CUPT.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
