--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -130,9 +130,20 @@
           <hr />
           <div class="row">
             <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="/images/ibpe/photo_1.jpg" alt=""
-              /></a>
+              <img src="/images/ibpe/photo_3.jpg" alt="" />
+              <header>
+                <h3>IBPE 2018</h3>
+              </header>
+              <p>
+                This photo was taken during the
+                <strong
+                  >2018 China Undergraduate Physics Tournament (CUPT)</strong
+                >. At 4 AM, we were preparing to depart for Qingdao, filled with
+                excitement and anticipation for the competition ahead.
+              </p>
+            </article>
+            <article class="col-4 col-12-mobile special">
+              <img src="/images/ibpe/photo_1.jpg" alt="" />
               <header>
                 <h3>IBPE 2019</h3>
               </header>
@@ -143,29 +154,13 @@
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="/images/ibpe/photo_2.jpg" alt=""
-              /></a>
+              <img src="/images/ibpe/photo_2.jpg" alt="" />
               <header>
                 <h3>IBPE 2019</h3>
               </header>
               <p>
                 Another memorable moment from IBPE 2019, taken right after our
                 remarkable performance at the CUPT.
-              </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="/images/pic09.jpg" alt=""
-              /></a>
-              <header>
-                <h3>Magna laoreet et aliquam</h3>
-              </header>
-              <p>
-                Amet nullam fringilla nibh nulla convallis tique ante proin
-                sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                consequat integer interdum.
               </p>
             </article>
           </div>
