--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -130,7 +130,9 @@
           <hr />
           <div class="row">
             <article class="col-4 col-12-mobile special">
-              <img src="/images/ibpe/photo_3.jpg" alt="" />
+              <a class="image featured"
+                ><img src="/images/ibpe/photo_3.jpg" alt=""
+              /></a>
               <header>
                 <h3>IBPE 2018</h3>
               </header>
@@ -143,7 +145,9 @@
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
-              <img src="/images/ibpe/photo_1.jpg" alt="" />
+              <a class="image featured"
+                ><img src="/images/ibpe/photo_1.jpg" alt=""
+              /></a>
               <header>
                 <h3>IBPE 2019</h3>
               </header>
@@ -154,7 +158,9 @@
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
-              <img src="/images/ibpe/photo_2.jpg" alt="" />
+              <a class="image featured"
+                ><img src="/images/ibpe/photo_2.jpg" alt=""
+              /></a>
               <header>
                 <h3>IBPE 2019</h3>
               </header>
