--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="col-2 col-12-mobile">
               <a class="image fit centered"
                 ><img
-                  src="/images/photo.jpg"
+                  src="/images/profile.jpg"
                   alt=""
                   style="width: 80%; border-radius: 50%"
               /></a>
