--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -74,9 +74,8 @@
           <article id="main" class="special">
             <header>
               <h2>
-                <a href="#">IBPE</a>
+                <a href="#">Innovative Base of Physics Experiments</a>
               </h2>
-              <p>Innovative Base of Physics Experiments (IBPE), HUST</p>
             </header>
             <p>
               During May 2019 - July 2020, I was the
