--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
         --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
       }
 
-      /* 时间线布局 */
+      /* Timeline */
       .timeline-container {
         position: relative;
         padding: 2rem 0;
