--- a/index.html
+++ b/index.html
@@ -18,106 +18,110 @@
       ><link rel="stylesheet" href="/assets/css/noscript.css"
     /></noscript>
     <style>
+      /* 新增CSS改进 */
       :root {
-        --primary-color: #1e3a8a;
-        --secondary-color: #64748b;
-        --background-color: #f8fafc;
-        --text-color: #1e293b;
-        --accent-color: #2563eb;
-        --border-radius: 12px;
+        --primary: #2c3e50;
+        --secondary: #3498db;
+        --accent: #e74c3c;
+        --light: #f8f9fa;
+        --radius-md: 12px;
+        --radius-xl: 25px;
+        --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
       }
 
-      /* Profile Header */
-      .profile-header {
-        text-align: center;
-        padding: 2rem 1rem;
-        background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-        border-radius: 12px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        margin: 1rem auto;
-        max-width: 600px;
-      }
-
-      .name-title {
-        font-size: 2.5rem;
-        color: #2c3e50;
-        margin-bottom: 1rem;
-        font-weight: 600;
-        letter-spacing: -0.05em;
+      /* Timeline */
+      .timeline-container {
         position: relative;
-        display: inline-block;
+        padding: 2rem 0;
       }
 
-      .pronunciation-wrap {
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-      }
-
-      .pronunciation-btn {
-        display: inline-flex;
-        align-items: center;
-        gap: 0.5rem;
-        background: none;
-        border: none;
-        cursor: pointer;
-        padding: 0.5rem 1rem;
-        border-radius: 25px;
-        transition: all 0.3s ease;
-        background-color: rgba(41, 128, 185, 0.1);
-        color: #2980b9;
-      }
-
-      .pronunciation-btn:hover {
-        background-color: rgba(41, 128, 185, 0.2);
-        transform: translateY(-1px);
-      }
-
-      .pronunciation-btn:active {
-        transform: translateY(0);
-      }
-
-      .speaker-icon {
-        width: 20px;
-        height: 20px;
-        fill: currentColor;
-      }
-
-      .pronunciation-text {
-        font-size: 0.9rem;
-        font-weight: 500;
-      }
-
-      .loading-indicator {
-        display: none;
-        width: 1.2rem;
-        height: 1.2rem;
-        border: 3px solid #ddd;
-        border-top-color: #2980b9;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
+      .timeline-line {
         position: absolute;
-        right: -1.5rem;
+        left: 24px;
+        top: 0;
+        bottom: 0;
+        width: 2px;
+        background: var(--secondary);
+        z-index: 0;
       }
 
-      @keyframes spin {
-        to {
-          transform: rotate(360deg);
-        }
+      .timeline-item {
+        position: relative;
+        margin: 2rem 0;
+        padding: 1.5rem;
+        background: white;
+        border-radius: var(--radius-md);
+        box-shadow: var(--shadow);
+        transition: transform 0.3s ease;
+        z-index: 1;
+      }
+
+      .timeline-item::before {
+        content: "";
+        position: absolute;
+        left: -28px;
+        top: 24px;
+        width: 16px;
+        height: 16px;
+        background: var(--secondary);
+        border: 3px solid white;
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px var(--secondary);
+      }
+
+      /* 卡片式布局 */
+      .card {
+        background: white;
+        border-radius: var(--radius-md);
+        box-shadow: var(--shadow);
+        padding: 1.5rem;
+        margin: 1rem 0;
+        transition: all 0.3s ease;
+      }
+
+      .card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+      }
+
+      /* 可折叠部分 */
+      .collapsible {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      }
+
+      .collapsible-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .collapsible-header:hover {
+        background: var(--light);
+      }
+
+      .collapsible-icon {
+        transition: transform 0.3s ease;
+      }
+
+      .collapsible-content {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
       }
 
       /* 响应式设计 */
-      @media (max-width: 480px) {
-        .name-title {
-          font-size: 2rem;
+      @media (max-width: 768px) {
+        .timeline-line {
+          left: 16px;
         }
 
-        .pronunciation-btn {
-          padding: 0.4rem 0.8rem;
-        }
-
-        .pronunciation-text {
-          font-size: 0.8rem;
+        .timeline-item::before {
+          left: -24px;
+          width: 12px;
+          height: 12px;
         }
       }
     </style>
@@ -291,7 +295,22 @@
               >.
             </p>
           </article>
-          <section id="education">
+          <section class="timeline-container" id="education">
+            <div class="timeline-line"></div>
+            <div class="timeline-item card">
+              <h3>Imperial College London</h3>
+              <p class="text-secondary">Sep. 2023 - Jun. 2025 (Expected)</p>
+              <p>M.Sc. in Physics with Extended Research</p>
+            </div>
+
+            <div class="timeline-item card">
+              <h3>Huazhong University of Science and Technology</h3>
+              <p class="text-secondary">Sep. 2018 - Jun. 2022</p>
+              <p>B.S. in Physics</p>
+            </div>
+          </section>
+
+          <section>
             <header>
               <h3>Education</h3>
             </header>
